--- a/2_test_erec_with_custom_texts.ipynb
+++ b/2_test_erec_with_custom_texts.ipynb
@@ -31,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7297ee04330b4bf9b3e19c860bff0830",
+       "model_id": "276c37c463cc47eaa14082cacb3228f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "10b9ce8b-ffe8-493f-8c27-142a29e67b88",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "d3479759-c79d-4283-a22a-814c1e8a1d20",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "503a250d-9401-43f7-a105-3792a72cd145",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "cc91f803-ce93-4931-a5df-f50a8c77dcd1",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "10b607be-9ea0-4613-8a32-7a1f98ad9d2f",
    "metadata": {},
    "outputs": [
@@ -201,61 +201,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "a3d62820-91e3-45db-966f-c2ae1ab97b87",
+   "cell_type": "markdown",
+   "id": "fae0f084-6332-4937-a433-b958b98839da",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = [1,2 ,3 ]"
+    "### get recommendations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "3a70f352-0485-4b48-bc5c-814347b3d973",
+   "execution_count": 19,
+   "id": "166abc65-2016-4b9d-83d5-0c286212e20d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stop the war in Ukraine, we need peace!\n",
+      "['🙏', '😔', '😢', '💔', '🇺🇦', '☮️', '🇷🇺']\n",
+      "\n",
+      "I came back home and we didn't have any food left\n",
+      "['🙃', '😭', '🙄', '😒', '🏠', '🏘️', '🔙']\n",
+      "\n",
+      "send nudes\n",
+      "['😛', '👅', '😋', '😈', '😏', '👙', '🚚']\n",
+      "\n",
+      "Why does my car always break down, I hate it!\n",
+      "['😤', '😭', '😒', '🙄', '🚗', '🏎️', '🚓']\n",
+      "\n",
+      "sweet potato fries are overrated\n",
+      "['🙄', '😷', '😒', '😂', '🥔', '🍟', '🍠']\n",
+      "\n",
+      "Whales are such majestic creatures.\n",
+      "['😍', '🐟', '🌊', '😭', '🐋', '🐬', '🐳']\n",
+      "\n",
+      "I don't think he deserved to be treated like that\n",
+      "['😔', '😞', '😪', '😕', '😒', '💔', '😢']\n",
+      "\n",
+      "Christopher Manning's papers are really lit.\n",
+      "['🔥', '😂', '👌', '😭', '📚', '📰', '🗞️']\n",
+      "\n",
+      "love the way you lie\n",
+      "['🎶', '😍', '😏', '🎧', '😊', '😌', '🤥']\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "a.pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "223bb15a-ea52-479c-a202-c6c688b92a14",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.copy()"
+    "sentences = [\n",
+    "    \"Stop the war in Ukraine, we need peace!\",\n",
+    "    \"I came back home and we didn't have any food left\", \n",
+    "    \"send nudes\", \n",
+    "    \"Why does my car always break down, I hate it!\",\n",
+    "    \"sweet potato fries are overrated\", \n",
+    "    \"Whales are such majestic creatures.\", \n",
+    "    \"I don't think he deserved to be treated like that\", \n",
+    "    \"Christopher Manning's papers are really lit.\", \n",
+    "    \"love the way you lie\", \n",
+    "]\n",
+    "\n",
+    "recs = m.recommend(sentences, 4, 3)\n",
+    "for i, s in enumerate(sentences): \n",
+    "    print(f\"{s}\")\n",
+    "    print(f\"{recs[i]}\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fc5dd18-395c-4b8c-9a66-3baedc09bf5a",
+   "id": "6e131541-782c-4527-b7a4-c02a54de78fc",
    "metadata": {},
    "outputs": [],
    "source": []
